# advent-of-code-2023

./: README.md
aocaml/: aocaml.opam  dune-project
aocaml/lib/: day_1.ml  day_12.ml  day_15.ml  day_17.ml  day_1_pt_2.ml  day_2.ml  day_3.ml  day_4.ml  day_5.ml  day_6.ml  day_7.ml  dune  warmup.ml
aocaml/test/: dune  test_aocaml.ml
